--- a/css/master.css
+++ b/css/master.css
@@ -398,29 +398,162 @@ ul{
 }
 
 /* the seprator space and its animation (END) */
+.article{
+    padding-bottom: 100px;
+
+}
 .article .info{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    column-gap: 35px;
+    row-gap: 35px;
 }
 .article .info .card img{
     width: 100%;
-    /* height: 250px; */
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%
 }
 .article .info .card{
+    margin-top: 20px;
+    box-shadow: 1px 1px 9px 0px #ebebeb;
+    transition: 0.3s;
+    transition-timing-function: ease-in-out;
+    border-radius: 3%;
+}
+.article .info .card:hover{
+    margin-top: 15px;
+    margin-bottom: 5px;
+    box-shadow: 1px 1px 9px 0px #a8a8a8;
+}
+@keyframes arrow-cards{
+    0%{
+        left: 0;
+    }
+    100%{
+        left: 6px; 
+    }
+}
+.article .info .card .text{
+    border-bottom-left-radius: 3%;
+    border-bottom-right-radius: 3%;
+    background-color: white
 
 }
 .article .info .card h4{
+    padding: 15px 15px 0px;
+    font-size: 19px;
+}
+.article .info .card p{
+    padding: 15px 15px;
+    line-height: 1.4;
+    color: #8a8a8a;
+}
+.article .info .card .button{
+    border-top: 1px solid #dbdbdb;
+    display: flex;
+    justify-content: space-between;
+    padding: 13px 19px;
+}
+.article .info .card  .button button{
+    background-color: white;
+    color: var(--main-color);
+    font-weight: bold;
+    border: none;
+}
+.article .info .card .button i{
+    color: var(--main-color);
+    position: relative;
 
 }
-.article .info .card h4 p{
+.article .info .card:hover i{
+
+    animation-name: arrow-cards;
+    animation-duration: 0.8s;
+    animation-iteration-count: infinite;
+}
+.gallery{
+    background-color: #ececec;
+    padding: 20px 0;
+    position: relative;
 
 }
-.article .info .card h4 .button{
-
+.gallery::before{
+    content: "";
+    position: absolute;
+    /* background: linear-gradient(
+        45deg,
+        red 20% ,
+        orange 20% 40%,
+        yellow 40% 60%,
+        green 60% 80%,
+        blue 80%
+    ),
+    linear-gradient(
+        45deg,
+        black 20% ,
+        wheat 20% 40%,
+        rgb(144, 255, 141) 40% 60%,
+        rgb(107, 0, 128) 60% 80%,
+        rgb(255, 85, 85) 80%
+    ); */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: transparent;
+    color: red;
+    /* font-weight: 900; */
 }
-.article .info .card h4 .button button{
-
+.gallery .container .images{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    column-gap: 20px;
+    row-gap: 20px;
 }
-.article .info .card h4 .button i{
+.gallery .container .images div{
+    width: fit-content;
+    border: 19px solid white;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 1px 1px 9px 0px #e1e1e1;
+    position: relative;
+    
+}
+.gallery .container .images img{
+    max-width: 100%;
+    transition: 0.5s;
+}
+.gallery .container .images div span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: rgba(255, 255, 255, 0);
+    width: 50%;
+    height: 50%;
 
+    transform: translate(-50%,-50%) scale(2);
+    
+}
+.gallery .container .images div:hover > img{
+    transform: rotate(3deg) scale(1.05);
+}
+.gallery .container .images div:hover > span{
+    animation-name: smooth-white ;
+    animation-duration: 0.3s;
+    animation-timing-function: linear;
+}
+@keyframes smooth-white{
+    0%{
+        transform: translate(-50%,-50%) scale(0.5);
+        
+    }
+    60%{
+        transform: translate(-50%,-50%) scale(1.5);
+        background-color: rgba(255, 255, 255, 0.18);
+
+    }
+    100%{
+        transform: translate(-50%,-50%) scale(2.5);
+        background-color: rgba(255, 255, 255, 0);
+    }
 }
