--- a/css/master.css
+++ b/css/master.css
@@ -473,7 +473,7 @@ ul{
 }
 .gallery{
     background-color: #ececec;
-    padding: 20px 0;
+    padding: 20px 0 60px;
     position: relative;
 
 }
@@ -556,4 +556,186 @@ ul{
         transform: translate(-50%,-50%) scale(2.5);
         background-color: rgba(255, 255, 255, 0);
     }
+}
+.features{
+    padding-bottom: 60px;
+}
+.features .container .all-cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    column-gap: 40px;
+}
+.features .container .feature-card img{
+    max-width: 100%;
+    z-index: -3;
+    position: relative;
+
+}
+.features .container .feature-card{
+    border: 1px solid #dedede;
+    /* height: fit-content; */
+    /* padding-bottom: 30px; */
+    overflow: hidden;
+
+    position: relative;
+}
+.features .container .feature-card .info{
+    background-color: white;
+    text-align: center;
+    position: relative;
+    top: -14%;
+}
+.features .container .feature-card .info::before{
+    content: "";
+    top: -57%;
+    left: -134px;
+    background-color: white;
+    height: 1000px;
+    width: 237%;
+    position: absolute;
+    transform: rotate(70deg);
+    z-index: -1;
+    transition: 0.4s;
+}
+.features .container .feature-card:hover .info::before{
+    content: "";
+    top: -4%;
+    left: -200px;
+    background-color: white;
+    height: 1000px;
+    width: 395%;
+    position: absolute;
+    transform: rotate(16deg);
+    z-index: -1;
+}
+.features .container .feature-card .text h3{
+    padding: 10px 0 15px;
+    font-size: 40px;
+    font-weight: 700;
+}
+.features .container .feature-card .text p{
+    padding: 30px 42px;
+    line-height: 1.8;
+    color: #666;
+    font-size: 20px;
+}
+.features .container .feature-card:first-child .text hr{
+    width: 27%;
+    border: 3px solid #f44036;
+    margin: auto;
+}
+.features .container .feature-card:nth-child(2) .text hr{
+    width: 16%;
+    border: 3px solid #009688;
+    margin: auto;
+}
+.features .container .feature-card:nth-child(3) .text hr{
+    width: 28%;
+    border: 3px solid #03a9f4;
+    margin: auto;
+}
+.features .container .feature-card .info .button{
+   
+}
+.features .container .feature-card .info .button a{
+    text-decoration: none;
+    border: 3px solid black;
+    padding: 1px 30px;
+    font-size: 24px;
+    border-radius: 10px;
+    font-weight: 700;
+    transition: 0.3s;
+    position: relative;
+    z-index: 4;
+}
+.features .container .feature-card:hover .info .button a::before{
+    width: 100%;
+
+}
+.features .container .feature-card:hover .info .button a{
+    color: white;
+}
+.features .container .feature-card:first-child .button a{
+ border-color: #f44036;
+ color: #f44036;
+ position: relative;
+}
+.features .container .all-cards .feature-card:first-child::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f43f368d;
+    z-index: -2;
+}
+.features .container .feature-card:nth-child(2)  .button a{
+    border-color: #009688;
+    color: #009688;
+}
+.features .container .all-cards .feature-card:nth-child(2)::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0096878c;
+    z-index: -2;
+}
+.features .container .feature-card:nth-child(3)  .button a{
+    border-color: #03a9f4;
+    color: #03a9f4;
+    position: relative;
+}
+.features .container .feature-card:nth-child(3)  .button a::before{
+    content: "";
+    width: 0%;
+    height: 100%;
+    background-color:#03a9f4 ;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.3s;
+    z-index: -1;
+    
+}
+.features .container .feature-card:nth-child(2)  .button a::before{
+    content: "";
+    width: 0%;
+    height: 100%;
+    background-color:#009688 ;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.3s;
+    z-index: -1;
+
+    
+}
+.features .container .feature-card:nth-child(1)  .button a::before{
+    content: "";
+    width: 0%;
+    height: 100%;
+    background-color:#f44036 ;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.3s;
+    z-index: -1;
+
+
+    
+}
+
+.features .container .all-cards .feature-card:nth-child(3)::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #03a8f48e;
+    z-index: -2;
 }
