--- a/css/master.css
+++ b/css/master.css
@@ -332,7 +332,7 @@ ul{
     box-sizing: border-box;
     font-size: 30px;
     font-weight: bold;
-    padding: 15px 25px;
+    padding: 10px 20px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
@@ -739,3 +739,58 @@ ul{
     background-color: #03a8f48e;
     z-index: -2;
 }
+.testimonals{
+    background-color: #ececec;
+    padding: 1px 0;
+
+}
+.testimonals .all-cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    column-gap: 40px;
+    row-gap: 40px;
+}
+.testimonals .all-cards .card img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    order: 1;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform: translate(9px,-50%);
+    border: 9px solid #ececec;
+}
+.testimonals .all-cards .card {
+    display: flex;
+    position: relative;
+    
+}
+.testimonals .all-cards .card .text{
+    background-color: white;
+    padding: 15px 15px;
+    border-radius: 10px;
+    box-shadow: -5px 2px 21px -12px #adadad;
+}
+.testimonals .all-cards .card .text h4{
+    font-size: 16px;
+    font-weight: normal;
+    color: #777;
+    padding: 10px 0 5px;
+}
+.testimonals .all-cards .card .text span{
+    padding: 5px 0 ;
+    display: block;
+}
+.testimonals .all-cards .card .text span i.filled{
+    color: #ffc107;
+    
+}
+.testimonals .all-cards .card .text p {
+    line-height: 1.5;
+    word-spacing: 2px;
+    color: #777;
+    padding: 5px 0 ;
+}
+
+
