--- a/css/master.css
+++ b/css/master.css
@@ -741,7 +741,7 @@ ul{
 }
 .testimonals{
     background-color: #ececec;
-    padding: 1px 0;
+    padding: 1px 0 85px;
 
 }
 .testimonals .all-cards{
@@ -792,5 +792,468 @@ ul{
     color: #777;
     padding: 5px 0 ;
 }
+.team .container .all-team{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    row-gap:40px;
+    column-gap: 40px;
+}
+.team .container .all-team .team-card{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    /* background-color:#f3f3f3; */
+    border-radius: 10px;
+    
+}
+.team .container .all-team .team-card:hover img{
+    filter: grayscale(1);
+}
+
+.team .container .all-team .team-card .text{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 15px;
+    padding-bottom: 20px;
+    width: 85%;
+    order: 2;
+    height: 100%;
+    align-self: flex-end;
+    background-color: #f3f3f3;
+    position: absolute;
+    border-radius: 10px;
+    z-index: -4;
+    transition: 0.3s;
+    transition-timing-function: ease-in-out;
+    transition-property: width;
+    overflow: hidden;
+
+    
+
+}
+.team .container .all-team .team-card:hover .text::after{
+    width: 100%;
+}
+.team .container .all-team .team-card .text::after{
+    position: absolute;
+    right: 0;
+    top: 0;
+    content:"";
+    width: 0%;
+    height: 100%;
+    background-color: #e4e4e4;
+    z-index: -3;
+    transition: 0.3s;
+
+    
+}
+.team .container .all-team .team-card .text h3{
+    color: #03a9f4;
+    font-size: 22px;
+    padding: 10px 0;
+}
+.team .container .all-team .team-card .text p{
+    padding-bottom:10px ;
+    color: #212121;
+}
+.team .container .all-team .team-card  img{
+    max-width: 100%;
+    width: 85%;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+.team .container .all-team .team-card .image-part{
+    display: flex;
+    justify-content: space-around;
+    max-width: fit-content;
+    position: relative;
+    left: 0;
+    top: 0;
+    margin: 54px 0 100px 0;
+    /* z-index: -2; */
+    
+}
+.team .container .all-team .team-card .image-part .icons{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 30px 0;
+    width: 15%;
+}
+.team .container .all-team .team-card .image-part .icons i{
+    color: #777777;
+    transition: 0.3s;
+    
+}
+.team .container .all-team .team-card .image-part .icons a:hover i{
+    color: #03a9f4;
+}
+.services{
+    background-color: #ececec;
+    padding-top: 1px;
+    margin-top: 120px;
+    padding-bottom: 120px;
+    
+}
+.services .container .services-all-cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+    row-gap: 40px;
+    column-gap: 40px;
+    text-align: center;
+}
+.services .container .services-all-cards .card{
+    background-color: white;
+    box-shadow: 1px 6px 12px -2px #c1c1c1;
+    counter-increment: services;
+    position: relative;
+    transition: 0.3s;
+
+}
+.services .container .services-all-cards .card::Before{
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background-color: var(--main-color);
+    top: -2px;
+    left: 0;
+    transition: 0.3s;
+    transform: scale(0);
+    transform-origin: center;
 
 
+}
+.services .container .services-all-cards .card:hover::Before{
+    transform: scale(1);
+    
+}
+.services .container .services-all-cards .card:hover{
+    transform:translateY(-10px);
+}
+.services .container .services-all-cards .card .logo i{
+    color: #d5d5d5;
+    margin-top: 40px;
+
+}
+.services .container .services-all-cards .card .logo h3{
+    color: var(--main-color);
+    font-size: 25px;
+    padding: 15px 0 ;
+}
+.services .container .services-all-cards .card .details-and-counter{
+    background-color: #f9f9f9;
+    text-align: right;
+    position: relative;
+}
+.services .container .services-all-cards .card .details-and-counter a{
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: var(--main-color);
+}
+
+.services .container .services-all-cards .card .details-and-counter::after{
+    content: "0"counter(services);
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 80px;
+    background-color: var(--main-color);
+    font-size: 35px;
+    color: white;
+    font-weight: 700;
+    text-align: left;
+    padding-left: 18px;
+
+}
+.services .container .services-all-cards .card .details-and-counter::before{
+    content: "";
+    position: absolute;
+    left: 78px;
+    top: 0;
+    height: 100%;
+    width: 50px;
+    transform:skewX(-30deg);
+    background-color: #d5d5d5;
+    z-index: 1;
+
+}
+.our-skills-main .container .our-skills{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 40px;
+}
+.our-skills-main{
+    padding-bottom: 120px;
+}
+.our-skills-main .container .our-skills .percentages .text{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.our-skills-main .container .our-skills .percentages .text span{
+    color: var(--main-color);
+    border: 1px solid #d6d6d6;
+    border-radius: 5px;
+    padding: 2px 4px;
+    font-size: 14px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.our-skills-main .container .our-skills .percentages .block{
+    margin-bottom: 20px;
+}
+.our-skills-main .container .our-skills .percentages .block .bar{
+    background-color: #eee;
+}
+.our-skills-main .container .our-skills .percentages .block .bar span{
+    display: block;
+    height: 30px;
+    width: 100%;
+    background-color: var(--main-color);
+}
+@media (max-width:991px){
+    .our-skills-main .container .our-skills .image{
+        display: none;
+    }
+    .our-skills-main .container .our-skills{
+        grid-template-columns:  1fr;
+    }
+}
+.how-it-works{
+    background-color: #ececec;
+    padding: 1px 0 60px;
+    
+
+}
+
+.how-it-works .content{
+    display: flex;
+    column-gap: 100px;
+    align-items: center;
+}
+.how-it-works .content .all-boxes img{
+    width: 60px;
+    height: 60px;
+    margin-right: 30px;
+    z-index: 1;
+}
+.how-it-works .content .all-boxes .box{
+    display: flex;
+    background-color: #f6f5f5;
+    padding-right: 50px;
+    padding: 30px;
+    margin-bottom: 30px;
+    align-items: center;
+    border: 2px solid white;
+    border-radius: 10px;
+    position: relative;
+
+}
+.how-it-works .content .all-boxes .box::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: #ededed;
+    transform: scale(0);
+    transform-origin: center;
+    transition: 0.3s ease-in-out;
+
+
+
+}
+.how-it-works .content .all-boxes .box:hover::after{
+    transform: scale(1);
+}
+.how-it-works .content .all-boxes .box .text{
+    z-index: 1;
+}
+.how-it-works .content .all-boxes .box h3{
+    padding-bottom: 10px;
+    font-size: 22px;
+
+}
+.how-it-works .content .all-boxes .box p{
+    color: #777;
+    line-height: 1.8;
+    font-size: 18px;
+    
+}
+@media(max-width:970px){
+    .how-it-works .content{
+        flex-direction: column;
+    }
+    .how-it-works .content .all-boxes{
+        margin-top: 45px;
+    }
+    .how-it-works .content .image img{
+        max-width: 100%;
+    }
+}
+.latest_events .content{
+    display: flex;
+}
+.latest_events .content .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100%;
+    
+}
+.latest_events .content .container .upper .image-middle{
+    width: 40%;
+
+}
+.latest_events .content .container .upper .image-middle img{
+    max-width: 100%;
+}
+.latest_events .content .container .upper .textandcounter{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+}
+.latest_events .content .image1 img{
+    position: relative;
+    bottom: -100%;
+    transform: translateY(-50%);
+
+}
+.latest_events .content .image2 img{
+    position: relative;
+    transform: translateY(-50%);
+
+}
+.latest_events .content .container .upper .textandcounter .other-text{ 
+    margin-top: 15px;
+    font-size: 20px;
+}
+.latest_events .content .container .upper{
+    display: flex;
+    align-items: center;
+    padding-bottom: 60px;
+}
+.latest_events .content .container .upper .textandcounter .counter{
+    display: flex;
+    text-align: center;
+    
+}
+.latest_events .content .container .upper .textandcounter .counter div{
+    height: 140px;
+    width: 75px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid #c5c5c5;
+    border-radius: 5px;
+    align-items: center;
+}
+.latest_events .content .container .upper .textandcounter .counter div:last-of-type{
+    margin-right: 0;
+}
+.latest_events .content .container .upper .textandcounter .counter div p {
+    padding: 8px 10px;
+    border-top: 1px solid #c5c5c5;
+    width: 100%;
+    font-size: 14px;
+}
+.latest_events .content .container .upper .textandcounter .counter div span{
+    justify-self: center;
+    display: block;
+    color: var(--main-color);
+    /* height: 140px; */
+    position: relative;
+    top: calc(50% - 15px);
+    font-size: 35px;
+    transform: translateY(-50%);
+    font-weight: bold;
+
+}
+.latest_events .content .container .upper .textandcounter .other-text h3{
+    font-weight: bold;
+    font-size: 30px;
+    padding: 20px;
+}
+.latest_events .content .container .upper .textandcounter .other-text p{
+    color: #777;
+    line-height: 1.5;
+}
+.latest_events .content .container .lower .boxes{
+    display: flex;
+    /* width: 100px; */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+
+.latest_events .content .container .lower .boxes input[type = "email"]{
+    border: none;
+    width: 419px;
+    color: #777;
+    display: block;
+    padding: 19px;
+    border-radius: 57px;
+    caret-color: var(--main-color);
+    transition: 0.3s;
+    
+}
+.latest_events .content .container .lower .boxes input[type = "email"]:focus{
+    outline: none;
+}
+.latest_events .content .container .lower .boxes input[type = "submit"]{
+    border: none;
+    background-color: var(--main-color);
+    color: white;
+    font-size: 17px;
+    font-weight: 700;
+    padding: 19px;
+    border-radius: 57px;
+    margin-left: 24px;
+}
+.latest_events .content .container .lower{
+    background-color: #f6f5f5;
+    border-radius: 50px;
+    width: 600px;
+    display: flex;
+    height: 101px;
+}
+.latest_events{
+    padding-bottom: 178px;
+}
+@media(max-width:1150px)
+{
+    .latest_events .content .image1 , .latest_events .content .image2{
+        display: none;
+    }
+}
+@media (max-width:760px)
+{
+    .latest_events .content .container .upper .image-middle{
+        display: none;
+    }
+    .latest_events .content .container .upper .textandcounter{
+        width: 100%;        
+    }
+}
+@media (max-width:700px){
+    .latest_events .content .container .lower{
+        width: 360px;
+    }
+    .latest_events .content .container .lower .boxes input[type = "email"]
+    {
+        width: 200px;
+    }
+}
