new sections added!

--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,3 @@
-html{
-    scroll-behavior: smooth;
-}
 *{
     box-sizing:border-box;
     padding: 0;
@@ -8,6 +5,9 @@ html{
 }
 :root{
     --main-color :#2196f3
+}
+html{
+    scroll-behavior:smooth;
 }
 .container{
     padding-left:15px;
@@ -1453,4 +1453,228 @@ ul{
     display: block;
     color: #949494;
     margin-top: 10px;
+}
+.stat{
+    background-image: url("../images/stats.jpg");
+    position: relative;
+    padding: 60px 0;
+}
+.stat::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 95%);
+    
+
+}
+.stat h2{
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    position: relative;
+    margin-bottom: 60px;
+}
+.stat .content {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    gap: 30px;
+}
+.stat .content .card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    box-shadow:0px 0px 12px 2px #ebebeb ;
+    padding: 20px 0 ;
+    justify-content: space-between;
+    height: 200px;
+    position: relative;
+    opacity: 0.8;
+}
+.stat .content .card::before{
+    content: "";
+    position: absolute;
+    width: 3px;
+    height: 0%;
+    transition: 1s ease-in-out;
+    top: 0;
+    left: 0;
+    background-color: var(--main-color);
+    z-index: 1;
+}
+.stat .content .card::after{
+    content: "";
+    position: absolute;
+    width: 3px;
+    transition: 1s ease-in-out;
+    height: 0%;
+    bottom: 0;
+    left: 100%;
+    background-color: var(--main-color);
+    z-index: 1;
+}
+.stat .content .card:hover::before, .stat .content .card:hover::after{
+    height:100%;
+}
+.stat .content .card:hover{
+    opacity: 1;
+}
+.stat .content .card i{
+}
+.stat .content .card span{
+    font-size: 50px;
+    font-weight: bold;
+}
+.stat .content .card  h4{
+    color: var(--main-color);
+    font-size: 20px;
+    font-style: italic;
+}
+.discount { 
+    display: flex;
+    justify-content: space-evenly;
+    min-height: 100vh;
+    padding-bottom: 60px ;
+    background-color: #191919;
+}
+
+
+.discount .left{
+    flex-basis: 50%;
+    background-image: url("../images/discount-background1.jpg");
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 40px 0;
+    justify-content: space-between;
+    align-items: center;
+    animation: change-background 10s alternate infinite;
+    
+}
+@keyframes change-background{
+    0%{
+        
+        background-image: url("../images/discount-background1.jpg");
+    }
+    50%{
+        background-image: url("../images/discount-background2.jpg");
+        
+    }
+    100%{
+        background-image: url("../images/discount-background1.jpg");
+
+    }
+}
+.discount .content{
+    width: 50%;
+}
+.discount .left h2{
+    color: white;
+    font-weight: bold;
+    font-size: 40px;
+    margin-bottom: 20px;
+
+}
+.discount .left p{
+    color: white;
+    font-size: 19px;
+    text-align: center;
+    line-height: 1.6;
+    padding: 0px 43px;
+    font-weight: 600;
+
+}
+.discount .left img{
+    width: 350px;
+
+}
+.discount .left::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color:#2195f3e3;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -1;
+}
+.discount .right{
+    flex-basis: 50%;
+    background-color: white;
+    z-index: 1;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    padding: 65px;
+    
+    
+}
+.discount .right .content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 321px;
+
+}
+.discount .right input{
+    border: none;
+    background-color: #f8f8f8;
+    border-bottom: 2px solid #e0e0e0;
+    height: 50px;
+    padding-left: 10px;
+    max-width: 100%;
+    margin-bottom: 20px;
+}
+.discount .right input:focus{
+outline: none;
+}
+.discount .right textarea:focus{
+outline: none;
+}
+
+.discount .right h2{
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.discount .right textarea{
+    margin-bottom: 20px;
+    height: 150px;
+    border: none;
+    resize: none;
+    background-color: #f8f8f8;
+    border-bottom: 2px solid #e0e0e0;
+    padding: 10px;
+    max-width: 100%;
+}
+.discount .right input[type = "submit"]{
+    color: white;
+    background-color: var(--main-color);
+    font-weight: bold;
+    font-size: 20px;
+    box-shadow: none;
+    padding: 0;
+    border: none;
+    cursor: pointer;
+}
+@media (max-width:991px)
+{
+    .discount{
+        flex-direction: column;
+    }
+    .discount .right{
+        padding: 30px 40px;
+        height: 600px;
+    }
+    .discount .left p{
+        padding: 0 15px;
+    }
 }
